Bug 398265, Crash [@ nsPrintPreviewListener::RemoveListeners()] with <frame> on print preview, r+sr=roc, a=1.9+